# Calc

./: .gitignore  CMakeLists.txt  README.md
include/: Calculator.hpp
src/: Calculator.cpp  main.cpp
test/: CalcBasicCommandTest.cpp  CalcTest.hpp
